--- a/资源负载页面自定义控件/resource_load_table_v1.1/css/main.css
+++ b/资源负载页面自定义控件/resource_load_table_v1.1/css/main.css
@@ -1,9 +1,9 @@
-
-html,body{
+html,
+body {
   margin: 0;
   padding: 0;
 }
-div{
+div {
   box-sizing: border-box;
 }
 #resourceLoadTableApp {
@@ -14,14 +14,14 @@ div{
   /* height: 600px; */
   padding: 20px;
   flex: 1;
-  margin: 10px
+  margin: 10px;
 }
-.table-title{
+#resourceLoadTableApp .table-title {
   font-size: 16px;
   color: #333;
   margin-bottom: 10px;
 }
-.table-box{
+#resourceLoadTableApp .table-box {
   width: 100%;
   /* flex: 1; */
   height: 500px;
@@ -30,7 +30,7 @@ div{
   align-items: flex-start;
 }
 
-.table-box .table-left{
+#resourceLoadTableApp .table-box .table-left {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -40,18 +40,17 @@ div{
   border: 1px solid #ccc;
 }
 
-.left-info-box{
+#resourceLoadTableApp .left-info-box {
   width: 100%;
   height: 570px;
   overflow-y: auto;
 }
-.rigth-info-box{
+#resourceLoadTableApp .rigth-info-box {
   height: 570px;
   overflow: auto;
 }
 
-
-.table-box .table-left .table-item{
+#resourceLoadTableApp .table-box .table-left .table-item {
   width: 100%;
   height: 30px;
   line-height: 30px;
@@ -60,7 +59,7 @@ div{
   padding: 0 10px;
   border-bottom: 1px solid #ccc;
 }
-.table-box .table-right{
+#resourceLoadTableApp .table-box .table-right {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -72,7 +71,7 @@ div{
   /* border-top: none; */
 }
 
-.table-box .table-right .table-item{
+#resourceLoadTableApp .table-box .table-right .table-item {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -83,39 +82,39 @@ div{
   /* border-top:1px solid #ccc; */
 }
 
-.table-right .date-span{
+#resourceLoadTableApp .table-right .date-span {
   display: flex;
   justify-content: center;
   align-items: center;
   border-right: 1px solid #ccc;
   /* border-top: 1px solid #ccc; */
-  border-bottom: 1px solid #ccc;;
+  border-bottom: 1px solid #ccc;
   height: 30px;
   width: 90px;
 }
-.table-right .table-right-date {
+#resourceLoadTableApp .table-right .table-right-date {
   /* border-bottom: 1px solid #ccc; */
 }
-.resource_info .date-span{
+#resourceLoadTableApp .resource_info .date-span {
   background-color: #fff6c1;
 }
 
-.rigth-info-item:last-of-type{
-  border-bottom: none
+#resourceLoadTableApp .rigth-info-item:last-of-type {
+  border-bottom: none;
 }
-.rigth-info-item:first-child .resource_info .date-span{
+#resourceLoadTableApp .rigth-info-item:first-child .resource_info .date-span {
   border-top: none;
 }
-.project_allocation .date-span{
+#resourceLoadTableApp .project_allocation .date-span {
   background-color: #d2eeff;
 }
-.table-right .table-right-date .date-span{
+#resourceLoadTableApp .table-right .table-right-date .date-span {
   border-top: none;
 }
-.table-left-item{
+#resourceLoadTableApp .table-left-item {
   width: 100%;
 }
-.table-left-item .resource-info-name{
+#resourceLoadTableApp .table-left-item .resource-info-name {
   width: 100%;
   height: 30px;
   display: flex;
@@ -128,31 +127,31 @@ div{
   background: #fff6c1;
   font-size: 14px;
 }
-.table-left-item .arrow-icon-open{
-  width:0;
-  height:0;
-  overflow:hidden;
-  font-size: 0;     
-  line-height: 0;  
-  border-width:6px;
-  border-style:solid dashed dashed dashed;
+#resourceLoadTableApp .table-left-item .arrow-icon-open {
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  border-width: 6px;
+  border-style: solid dashed dashed dashed;
   border-color: transparent transparent transparent #333;
 }
 
-.table-left-item .arrow-icon-close{
-  width:0;
-  height:0;
-  overflow:hidden;
-  font-size: 0;     
-  line-height: 0;  
-  border-width:6px;
-  border-style:solid dashed dashed dashed;
+#resourceLoadTableApp .table-left-item .arrow-icon-close {
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  border-width: 6px;
+  border-style: solid dashed dashed dashed;
   border-color: transparent transparent transparent #333;
-  transform:rotate(45deg);
+  transform: rotate(45deg);
   margin-top: 10px;
 }
 
-.level-two{
+#resourceLoadTableApp .level-two {
   width: 100%;
   height: 30px;
   display: flex;
@@ -161,10 +160,9 @@ div{
   border-bottom: 1px solid #ccc;
   padding-left: 70px;
   font-size: 14px;
-
 }
 
-.table-left-item .resource-project-allocation{
+#resourceLoadTableApp .table-left-item .resource-project-allocation {
   width: 100%;
   height: 30px;
   display: flex;
@@ -176,10 +174,9 @@ div{
   color: #333;
   font-size: 14px;
   background: #d2eeff;
-
 }
 
-.level-three{
+#resourceLoadTableApp .level-three {
   width: 100%;
   height: 30px;
   display: flex;
