--- a/质量计划设置页面自定义控件/quality_plan_1.4_cache/quality_plan/css/main.css
+++ b/质量计划设置页面自定义控件/quality_plan_1.4_cache/quality_plan/css/main.css
@@ -17,7 +17,8 @@
 .el-table__body th {
 	padding: 1px;
 } */
-html,body{
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -45,7 +46,7 @@ html,body{
   position: relative;
 }
 
-#qualityPlanApp .table-box{
+#qualityPlanApp .table-box {
   padding: 10px;
 }
 
@@ -66,9 +67,9 @@ html,body{
   background: #779bf5;
 }
 
-button[disabled]{
-  background: #ccc!important;
-  color: #666!important;
+button[disabled] {
+  background: #ccc !important;
+  color: #666 !important;
 }
 
 #qualityPlanApp .recheck-box {
@@ -150,23 +151,32 @@ button[disabled]{
   padding: 0px !important;
 } */
 #qualityPlanApp .el-table__body tr.current-row > td {
-  background-color: #eff3fd   !important;
+  background-color: #eff3fd !important;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
 #qualityPlanApp .el-table--enable-row-hover .el-table__body tr:hover > td {
-  background-color: #eff3fd  ;
+  background-color: #eff3fd;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
 
-
-.el-table td, .el-table th.is-leaf,.el-table--border, .el-table--group{
-  border-color: #cecece!important; 
+.el-table td,
+.el-table th.is-leaf,
+.el-table--border,
+.el-table--group {
+  border-color: #cecece !important;
 }
-.el-table--border::after, .el-table--group::after, .el-table::before{
-  background-color: #cecece!important;
+.el-table--border::after,
+.el-table--group::after,
+.el-table::before {
+  background-color: #cecece !important;
 }
-
 
 .el-table .delegate-row {
   background: #eee;
+}
+
+/* 修改element表头错位的问题 */
+.el-table--border th.gutter:last-of-type {
+  /* display: block !important; */
+  width: 8px !important;
 }
