--- a/质量管理-质量分析与控制/quality_analysis_control_v1.0/css/main.css
+++ b/质量管理-质量分析与控制/quality_analysis_control_v1.0/css/main.css
@@ -1,4 +1,5 @@
-html,body{
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -27,7 +28,7 @@ html,body{
   position: relative;
 }
 
-#qualityACApp .btn-lsit .btn-box-right{
+#qualityACApp .btn-lsit .btn-box-right {
   padding-right: 20px;
 }
 
@@ -47,7 +48,7 @@ html,body{
   background: #779bf5;
 }
 
-#qualityACApp .message-box{
+#qualityACApp .message-box {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -55,10 +56,10 @@ html,body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(0, 0, 0, .4);
+  background: rgba(0, 0, 0, 0.4);
 }
 
-#qualityACApp .message-content{
+#qualityACApp .message-content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -68,7 +69,7 @@ html,body{
   background: #fff;
 }
 
-#qualityACApp .message-title{
+#qualityACApp .message-title {
   display: flex;
   justify-content: flex-start;
   padding-left: 20px;
@@ -79,20 +80,20 @@ html,body{
   border-bottom: 1px solid #eee;
 }
 
-#qualityACApp .message-info{
+#qualityACApp .message-info {
   overflow-y: auto;
   padding: 30px 50px;
   height: 500px;
 }
 
-#qualityACApp .message-item{
+#qualityACApp .message-item {
   height: 40px;
   /* padding-left: 30px; */
   font-size: 18px;
   color: #333;
 }
 
-#qualityACApp .message-info-empty{
+#qualityACApp .message-info-empty {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,7 +101,7 @@ html,body{
   color: #333;
 }
 
-#qualityACApp .message-btn-list{
+#qualityACApp .message-btn-list {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,12 +125,12 @@ html,body{
   background: #779bf5;
 }
 
-#qualityACApp .select-box{
+#qualityACApp .select-box {
   width: 100%;
   height: 200px;
 }
 
-#qualityACApp .select-options{
+#qualityACApp .select-options {
   height: 100%;
   border: 1px solid #eee;
   border-radius: 5px;
@@ -137,7 +138,7 @@ html,body{
   background-color: #fff;
 }
 
-#qualityACApp .table-content{
+#qualityACApp .table-content {
   display: flex;
   justify-content: flex-start;
   align-items: stretch;
@@ -146,27 +147,28 @@ html,body{
   height: 100%;
 }
 
-#qualityACApp .table-box{
+#qualityACApp .table-box {
   border: 1px solid #eee;
   flex: 1;
   background-color: #fff;
   justify-content: stretch;
-  padding:10px;
+  padding: 10px;
   /* height: 100%; */
 }
 
-#qualityACApp .table-left{
+#qualityACApp .table-left {
+  overflow: auto;
   margin-right: 10px;
 }
 
-#qualityACApp .table-right{
+#qualityACApp .table-right {
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
   flex-grow: 1;
 }
 
-#qualityACApp .detail-info-box{
+#qualityACApp .detail-info-box {
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
@@ -174,22 +176,22 @@ html,body{
   margin-bottom: 20px;
 }
 
-#qualityACApp .title-info-box{
+#qualityACApp .title-info-box {
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
-#qualityACApp .drop-btn{
+#qualityACApp .drop-btn {
   font-size: 24px;
   color: #5582f4;
 }
 
-#qualityACApp .title-text{
+#qualityACApp .title-text {
   font-size: 18px;
-  color:  #5582f4;
+  color: #5582f4;
 }
-#qualityACApp .search-icon{
+#qualityACApp .search-icon {
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -197,18 +199,22 @@ html,body{
   font-size: 20px;
 }
 #qualityACApp .el-table__body tr.current-row > td {
-  background-color: #eff3fd   !important;
+  background-color: #eff3fd !important;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
 #qualityACApp .el-table--enable-row-hover .el-table__body tr:hover > td {
-  background-color: #eff3fd  ;
+  background-color: #eff3fd;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
 
-
-.el-table td, .el-table th.is-leaf,.el-table--border, .el-table--group{
-  border-color: #cecece; 
+.el-table td,
+.el-table th.is-leaf,
+.el-table--border,
+.el-table--group {
+  border-color: #cecece;
 }
-.el-table--border::after, .el-table--group::after, .el-table::before{
+.el-table--border::after,
+.el-table--group::after,
+.el-table::before {
   background-color: #cecece;
 }
