--- a/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/css/main.css
+++ b/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/css/main.css
@@ -1,4 +1,5 @@
-html,body{
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -28,7 +29,7 @@ html,body{
   flex-shrink: 0;
 }
 
-#costCAApp .btn-lsit .btn-box-right{
+#costCAApp .btn-lsit .btn-box-right {
   padding-right: 20px;
 }
 
@@ -48,7 +49,7 @@ html,body{
   background: #779bf5;
 }
 
-#costCAApp .message-box{
+#costCAApp .message-box {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -56,11 +57,10 @@ html,body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(0, 0, 0, .4);
+  background: rgba(0, 0, 0, 0.4);
 }
 
-
-#costCAApp .message-content{
+#costCAApp .message-content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -70,7 +70,7 @@ html,body{
   background: #fff;
 }
 
-#costCAApp .message-title{
+#costCAApp .message-title {
   display: flex;
   justify-content: flex-start;
   padding-left: 20px;
@@ -81,20 +81,20 @@ html,body{
   border-bottom: 1px solid #eee;
 }
 
-#costCAApp .message-info{
+#costCAApp .message-info {
   overflow-y: auto;
   padding: 30px 50px;
   height: 500px;
 }
 
-#costCAApp .message-item{
+#costCAApp .message-item {
   height: 40px;
   /* padding-left: 30px; */
   font-size: 18px;
   color: #333;
 }
 
-#costCAApp .message-info-empty{
+#costCAApp .message-info-empty {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -102,7 +102,7 @@ html,body{
   color: #333;
 }
 
-#costCAApp .message-btn-list{
+#costCAApp .message-btn-list {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -126,7 +126,7 @@ html,body{
   background: #779bf5;
 }
 
-.follow-task-list-box{
+.follow-task-list-box {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -134,10 +134,10 @@ html,body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(0, 0, 0, .4);
+  background: rgba(0, 0, 0, 0.4);
 }
 
-.follow-task-list-content{
+.follow-task-list-content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -146,7 +146,7 @@ html,body{
   background: #fff;
 }
 
-.follow-task-list-title{
+.follow-task-list-title {
   display: flex;
   height: 50px;
   justify-content: space-between;
@@ -157,7 +157,7 @@ html,body{
   font-weight: 700;
 }
 
-.follow-task-table-box{
+.follow-task-table-box {
   display: flex;
   padding: 20px;
   justify-content: center;
@@ -166,7 +166,7 @@ html,body{
   border-bottom: 1px solid #eee;
 }
 
-.follow-task-btn-box{
+.follow-task-btn-box {
   display: flex;
   height: 60px;
   justify-content: space-evenly;
@@ -189,14 +189,14 @@ html,body{
   background: #779bf5;
 }
 
-#costCAApp .select-box{
+#costCAApp .select-box {
   /* width: 100%;
   height: 200px; */
   margin: 10px;
   margin-bottom: 0px;
 }
 
-#costCAApp .select-options{
+#costCAApp .select-options {
   height: 100%;
   border: 1px solid #eee;
   /* border-radius: 5px;
@@ -204,7 +204,7 @@ html,body{
   background-color: #fff;
 }
 
-#costCAApp .sel-item{
+#costCAApp .sel-item {
   /* width: 100%; */
   height: 40px;
   display: flex;
@@ -213,12 +213,12 @@ html,body{
   padding-left: 20px;
 }
 
-#costCAApp .sel-item-title{
+#costCAApp .sel-item-title {
   line-height: 40px;
   font-size: 16px;
 }
 
-#costCAApp .table-content{
+#costCAApp .table-content {
   display: flex;
   justify-content: flex-start;
   align-items: stretch;
@@ -227,28 +227,28 @@ html,body{
   margin: 10px;
 }
 
-#costCAApp .table-box{
+#costCAApp .table-box {
   border: 1px solid #eee;
   flex: 1;
   background-color: #fff;
   justify-content: stretch;
-  padding:10px;
+  padding: 10px;
   flex-shrink: 1;
   overflow-y: auto;
 }
 
-#costCAApp .table-left{
+#costCAApp .table-left {
   margin-right: 10px;
 }
 
-#costCAApp .table-right{
+#costCAApp .table-right {
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
   flex-grow: 1;
 }
 
-#costCAApp .detail-info-box{
+#costCAApp .detail-info-box {
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
@@ -256,22 +256,22 @@ html,body{
   margin-bottom: 20px;
 }
 
-#costCAApp .title-info-box{
+#costCAApp .title-info-box {
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
-#costCAApp .drop-btn{
+#costCAApp .drop-btn {
   font-size: 24px;
   color: #5582f4;
 }
 
-#costCAApp .title-text{
+#costCAApp .title-text {
   font-size: 18px;
-  color:  #5582f4;
+  color: #5582f4;
 }
-#costCAApp .search-icon{
+#costCAApp .search-icon {
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -279,22 +279,47 @@ html,body{
   font-size: 20px;
 }
 
-#costCAApp .search-icon .el-icon-search{
-  position: static!important;
+#costCAApp .search-icon .el-icon-search {
+  position: static !important;
 }
+
+#costCAApp .follow-task-handle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#costCAApp .follow-task-handle-right i {
+  cursor: pointer;
+  font-size: 24px;
+  color: #999;
+}
+
+#costCAApp .follow-task-handle-right i:hover {
+  color: red;
+}
+
+#costCAApp .custom-elinput-num {
+  margin: 2px 5px;
+}
+
 #costCAApp .el-table__body tr.current-row > td {
-  background-color: #eff3fd   !important;
+  background-color: #eff3fd !important;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
 #costCAApp .el-table--enable-row-hover .el-table__body tr:hover > td {
-  background-color: #eff3fd  ;
+  background-color: #eff3fd;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
 
-
-.el-table td, .el-table th.is-leaf,.el-table--border, .el-table--group{
-  border-color: #cecece; 
+.el-table td,
+.el-table th.is-leaf,
+.el-table--border,
+.el-table--group {
+  border-color: #cecece;
 }
-.el-table--border::after, .el-table--group::after, .el-table::before{
+.el-table--border::after,
+.el-table--group::after,
+.el-table::before {
   background-color: #cecece;
 }
