--- a/项目设计管理看板/design_management_kanban/css/main.css
+++ b/项目设计管理看板/design_management_kanban/css/main.css
@@ -14,8 +14,8 @@ body {
 */
 
 #designManagementApp {
-  width: 520px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   background: #fff;
   overflow: hidden;
   font-family: SourceHanSansCN-Bold;
@@ -26,10 +26,11 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: stretch;
+  justify-content: flex-start;
   align-items: stretch;
   padding: 20px;
   padding-top: 10px;
+  padding-bottom: 5px;
   box-sizing: border-box;
 }
 
@@ -100,5 +101,13 @@ body {
 
 #designManagementApp .el-table td,
 .el-table th.is-leaf {
-  border-bottom: none;
+  border-bottom: none !important;
+}
+
+#designManagementApp el-table__row > td {
+  border: none;
+}
+
+#designManagementApp .el-table::before {
+  height: 0px;
 }
