--- a/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/当前任务成本管控/ctask_cost_control_1.0/css/main.css
+++ b/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/当前任务成本管控/ctask_cost_control_1.0/css/main.css
@@ -1,4 +1,5 @@
-html,body{
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -29,7 +30,7 @@ html,body{
   position: relative;
 }
 
-#ctaskCostControlApp .btn-lsit .btn-box-right{
+#ctaskCostControlApp .btn-lsit .btn-box-right {
   padding-right: 20px;
 }
 
@@ -50,11 +51,11 @@ html,body{
 }
 
 #ctaskCostControlApp .el-table__body tr.current-row > td {
-  background-color: #eff3fd   !important;
+  background-color: #eff3fd !important;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
 #ctaskCostControlApp .el-table--enable-row-hover .el-table__body tr:hover > td {
-  background-color: #eff3fd  ;
+  background-color: #eff3fd;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
 
@@ -68,7 +69,7 @@ html,body{
   margin: 0 -10px;
   text-indent: 10px;
 }
-#ctaskCostControlApp .check-man{
+#ctaskCostControlApp .check-man {
   border-top: none;
   border-bottom: 1px solid #cecece;
 }
@@ -76,44 +77,60 @@ html,body{
   border: none;
 }
 
-.item-wrap{
+#ctaskCostControlApp .check-man .check-man-suggestions {
+  width: 80%;
+  overflow: hidden;
+  word-break: keep-all;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.item-wrap {
   padding: 15px 50px 20px 28px;
   background: #fff;
   margin-bottom: 10px;
 }
 
-.title-info-box{
+.title-info-box {
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
-.drop-btn{
+.drop-btn {
   font-size: 18px;
   color: #5582f4;
   margin-right: 5px;
 }
 
-.title-text{
+.title-text {
   font-size: 18px;
-  color:  #5582f4;
+  color: #5582f4;
 }
 
-.table-content{
+.table-content {
   padding: 10px 0 0 20px;
 }
 
-.el-table td, .el-table th.is-leaf,.el-table--border, .el-table--group{
-  border-color: #cecece; 
+.el-table td,
+.el-table th.is-leaf,
+.el-table--border,
+.el-table--group {
+  border-color: #cecece;
 }
-.el-table--border::after, .el-table--group::after, .el-table::before{
+.el-table--border::after,
+.el-table--group::after,
+.el-table::before {
   background-color: #cecece;
 }
 
-.el-table--border th, .el-table__fixed-right-patch{
+.el-table--border th,
+.el-table__fixed-right-patch {
   border-bottom: 1px solid #cecece;
 }
 
-.el-table--border td, .el-table--border th, .el-table__body-wrapper .el-table--border.is-scrolling-left~.el-table__fixed {
+.el-table--border td,
+.el-table--border th,
+.el-table__body-wrapper .el-table--border.is-scrolling-left ~ .el-table__fixed {
   border-right: 1px solid #cecece;
 }
