--- a/区块链存证/blockchain_certificate/css/main.css
+++ b/区块链存证/blockchain_certificate/css/main.css
@@ -18,6 +18,7 @@ body {
 #bcCertificateApp .content {
   width: 100%;
   height: 100%;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -36,32 +37,72 @@ body {
   align-items: center;
 }
 
-#blockchainCertificateApp .header-box {
+.detail-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 999;
   display: flex;
-  height: 45px;
-  flex: 1;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  border-bottom: 1px solid #e6e6e6;
 }
 
-#blockchainCertificateApp .title-box {
+.detail-box {
+  width: 1020px;
+  height: 682px;
+  background: url("../image/bg-text.png") no-repeat center 160px,
+    url("../image/bg.jpg") no-repeat center/cover;
+}
+
+.detail-info-list {
+  width: 840px;
+  height: 280px;
+  /* border: 1px solid #333; */
+  margin: 320px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.detail-info-item {
+  width: 48%;
+  height: 69px;
+  box-sizing: border-box;
+  /* border: 1px solid #eee; */
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 70%;
-  height: 100%;
-  font-size: 18px;
-  color: #2b2b2b;
-  font-weight: 800;
 }
 
-#bcCertificateApp .pagination-box {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 30%;
-  height: 100%;
-  font-size: 14px;
-  color: #666666;
+.label {
+  /* min-width: 40px; */
+  font-size: 16px;
+  color: #2b2b2b;
+  margin-right: 5px;
+}
+
+.value {
+  width: 300px;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.close-btn {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 48px;
+  color: #3c3a3a;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+
+.close-btn:hover {
+  transform: rotate(90deg) translateZ(0);
 }
