--- a/质量计划设置页面自定义控件/quality_plan_1.4_cache/quality_plan/css/main.css
+++ b/质量计划设置页面自定义控件/quality_plan_1.4_cache/quality_plan/css/main.css
@@ -134,6 +134,10 @@ button[disabled] {
   text-indent: 10px;
 }
 
+#qualityPlanApp .checek-man span {
+  white-space: nowrap;
+}
+
 #qualityPlanApp .checek-man:nth-child(2) {
   border-top: 1px solid #ebeef5;
 }
